2008-11-17  Bernhard Walle <bernhard.walle@gmx.de>

	* Implement read_ikconfig command.

2008-11-13  Bernhard Walle <bwalle@suse.de>

	* Strip the whole crashkernel option when loading the kdump kernel, not
	  only parts of them, also when the extended crashkernel syntax has been
	  used.

2008-11-12  Bernhard Walle <bwalle@suse.de>

	* Fix wrong path when modifying the /etc/sysconfig/kdump file when
	  creating the kdump initrd.
	* Fix compile warning (ignoring return value of chdir(2)).
	* Prepend a space before MAKEDUMPFILE_OPTIONS so that there's always a
	  space between command and the first argument.
	* Fix finding of the kernel image (/boot/vmlinuz) with rootdir.

2008-11-11  Bernhard Walle <bwalle@suse.de>

	* Print the prefix in the debugging output of
	  Debuglink::findDebugfile().
	* Fix copying of debug info when --root is specified and the debug
	  file resides in GLOBALDEBUGDIR/EXECDIR/DEBUGFILE.

2008-11-02  Bernhard Walle <bwalle@suse.de>

	* Implement printing of canonical path (realpath) for the 'print_target'
	  subcommand.
	* Implement support for resolving symbolic links inside a root directory
	  (--root=...) when saving the dump.
	* Don't print a (red) info message that email failed if both
	  KDUMP_SMTP_SERVER and KDUMP_NOTIFICATION_TO are empty.
	* If KDUMP_SAVEDIR points to a local file, resolve symlinks when
	  creating the initrd because in theory the file system that contains
	  parts of the symlinks is not mounted in initrd.
	* Fix KDUMP_NETCONFIG=auto by calling mkinitrd with right parameters.
	* Create core dumps in the initrd when kdumptool crashes.
	* Fix compile warning in IdentifyKernel::execute().
	* Also return the default terminal size if ioctl(TIOCGWINSZ) returns
	  a size of 0x0.
	* Fix std::logic_error in Email::send() that caused kdumptool to
	  terminate unexpectedly.
	* Remove newline from the SMTP status error text.
	* Implement debugging of SMTP session.