@@ -1,0 +1,63 @@
+/*
+ * (c) 2008, Bernhard Walle <bwalle@suse.de>, SUSE LINUX Products GmbH
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 2
+ * of the License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
+ * 02110-1301, USA.
+ */
+#include <iostream>
+#include <string>
+#include <zlib.h>
+#include <libelf.h>
+#include <gelf.h>
+#include <cerrno>
+#include <fcntl.h>
+
+#include "subcommand.h"
+#include "debug.h"
+#include "findkernel.h"
+#include "util.h"
+#include "kerneltool.h"
+
+using std::string;
+using std::cout;
+using std::cerr;
+using std::endl;
+
+//{{{ FindKernel ---------------------------------------------------------------
+
+
+// -----------------------------------------------------------------------------
+FindKernel::FindKernel()
+    throw ()
+{}
+
+// -----------------------------------------------------------------------------
+const char *FindKernel::getName() const
+    throw ()
+{
+    return "find_kernel";
+}
+
+// -----------------------------------------------------------------------------
+void FindKernel::execute()
+    throw (KError)
+{
+    Debug::debug()->trace("FindKernel::execute()");
+
+}
+
+//}}}
+
+// vim: set sw=4 ts=4 fdm=marker et: :collapseFolds=1:
